# api/swagger/swagger.yaml
@@ -35,7 +35,23 @@ paths:
               $ref: "#/definitions/File"
         "400":
           description: "Invalid status value"
-
+    post:
+      operationId: uploadFile
+      summary: Uploads a file.
+      consumes:
+        - multipart/form-data
+      parameters:
+        - in: formData
+          name: upfile
+          type: file
+          description: The file to upload.
+      responses:
+        "200":
+          description: Successful
+          schema:
+            type: object
+        "400":
+          description: "Invalid status value"
 
   /hello:
     # binds a127 app logic to a route
